--- a/O2DESNet/O2DESNet.csproj
+++ b/O2DESNet/O2DESNet.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <AssemblyName>O2DESNet</AssemblyName>
     <RootNamespace>O2DESNet</RootNamespace>
     <LangVersion>latest</LangVersion>
@@ -49,7 +49,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Collections.Immutable" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
     
     <!-- 👇─— Core Serilog runtime -->
